--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -57,6 +57,7 @@
     <link rel="stylesheet" href="{{ versioned_static('css/compact-ui.css') }}">
 
     <link rel="stylesheet" href="{{ versioned_static('css/dropdown.css') }}">
+    <link rel="stylesheet" href="{{ versioned_static('css/dropdown-emergency-fix.css') }}">
 
     <!-- 4. Custom App Styles - App-specific enhancements -->
     <link rel="stylesheet" href="{{ versioned_static('css/custom.css') }}">
