--- a/app/static/css/compact-ui.css
+++ b/app/static/css/compact-ui.css
@@ -289,6 +289,10 @@
     border-color: var(--danger-dark) !important;
 }
 
+#table-container {
+    z-index: -9999;
+}
+
 @keyframes pulse-edit-button {
     0% {
         box-shadow: 0 0 0 0 rgba(239, 68, 68, 0.4);
